# myconfig

./: .gitignore  Makefile  pyproject.toml  setup.cfg  setup.py
conf/: config.develop.yaml  config.yaml  logging.develop.yaml  logging.yaml
myconfig/: config.py  logs.py  yamlext.py
tests/: __main__.py  test1.py
