[metadata]
# name = <project-name>
description = upgrade for python module with mqtt message
long_description = file: README.md
author = icersong
author_email = icersong@gmail.com
#url = http://gogs.smart-factory.cn/HCPS/box-server
platforms =
    linux
    macos
classifiers =
    Development Status :: {version} - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
keywords = <keywords>
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data=True
setup_requires =
    setuptools >= 36.2.7
    setuptools_scm >= 1.7.0
    tomli
install_requires =
    # path
    # concurrent-log-handler
[options.package_data]
* = *.js, *.map

# [options.data_files]
# <project-folder>/=
#     conf/logging.yaml
#     conf/config.yaml
#     ./requirements.txt

#[options.entry_points]
#console_scripts =
#    box-server = box_server:run

# [options.extras_require]
# test =
#     pytest >= 5.0
#     pytest-cov
#     pytest-mock
#     # pytest-tornado5
# doc =
#     sphinx
#     sphinx-rtd-theme

# [tool:pytest]
# addopts = -rsx --cov --tb=short
# testpaths = tests

#[coverage:run]
#source = box_server

[coverage:report]
show_missing = true

[flake8]
max-line-length = 128
